---
source: compiler/src/compile/ir/optimisations.rs
expression: output
input_file: compiler/src/compile/ir/snapshot_tests/optimisations/constant_folding/unary_folding.tapir
---
----------- before -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.67 = int 5
temp.68 = -temp.67
neg1.69 = temp.68
temp.70 = int 10
temp.71 = -temp.70
temp.72 = -temp.71
neg2.73 = temp.72
temp.74 = int 15
temp.75 = -temp.74
temp.76 = -temp.75
neg3.77 = temp.76
temp.78 = bool true
temp.79 = !temp.78
not1.80 = temp.79
temp.81 = bool false
temp.82 = !temp.81
not2.83 = temp.82
temp.84 = bool true
temp.85 = !temp.84
temp.86 = !temp.85
not3.87 = temp.86
temp.88 = bool false
temp.89 = !temp.88
temp.90 = !temp.89
temp.91 = !temp.90
not4.92 = temp.91
temp.93 = int 0
temp.94 = ~temp.93
bnot1.95 = temp.94
temp.96 = int 255
temp.97 = ~temp.96
bnot2.98 = temp.97
temp.99 = int 42
temp.100 = ~temp.99
temp.101 = ~temp.100
bnot3.102 = temp.101
temp.103 = fix 1.5
temp.104 = -temp.103
fix_neg1.105 = temp.104
temp.106 = fix 2.25
temp.107 = -temp.106
temp.108 = -temp.107
fix_neg2.109 = temp.108
temp.110 = int 5
temp.111 = -temp.110
temp.112 = int 10
temp.113 = temp.111 + temp.112
combo1.114 = temp.113
temp.115 = int 255
temp.116 = ~temp.115
temp.117 = int 15
temp.118 = temp.116 & temp.117
combo2.119 = temp.118
temp.120 = neg1.69
storeprop temp.120, 0
wait
temp.121 = neg2.73
storeprop temp.121, 0
wait
temp.122 = neg3.77
storeprop temp.122, 0
wait
temp.123 = not1.80
storeprop temp.123, 1
wait
temp.124 = not2.83
storeprop temp.124, 1
wait
temp.125 = not3.87
storeprop temp.125, 1
wait
temp.126 = not4.92
storeprop temp.126, 1
wait
temp.127 = bnot1.95
storeprop temp.127, 0
wait
temp.128 = bnot2.98
storeprop temp.128, 0
wait
temp.129 = bnot3.102
storeprop temp.129, 0
wait
temp.130 = combo1.114
storeprop temp.130, 0
wait
temp.131 = combo2.119
storeprop temp.131, 0
return 


----------- copy_propagation -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.67 = int 5
temp.68 = -temp.67
neg1.69 = temp.68
temp.70 = int 10
temp.71 = -temp.70
temp.72 = -temp.71
neg2.73 = temp.72
temp.74 = int 15
temp.75 = -temp.74
temp.76 = -temp.75
neg3.77 = temp.76
temp.78 = bool true
temp.79 = !temp.78
not1.80 = temp.79
temp.81 = bool false
temp.82 = !temp.81
not2.83 = temp.82
temp.84 = bool true
temp.85 = !temp.84
temp.86 = !temp.85
not3.87 = temp.86
temp.88 = bool false
temp.89 = !temp.88
temp.90 = !temp.89
temp.91 = !temp.90
not4.92 = temp.91
temp.93 = int 0
temp.94 = ~temp.93
bnot1.95 = temp.94
temp.96 = int 255
temp.97 = ~temp.96
bnot2.98 = temp.97
temp.99 = int 42
temp.100 = ~temp.99
temp.101 = ~temp.100
bnot3.102 = temp.101
temp.103 = fix 1.5
temp.104 = -temp.103
fix_neg1.105 = temp.104
temp.106 = fix 2.25
temp.107 = -temp.106
temp.108 = -temp.107
fix_neg2.109 = temp.108
temp.110 = int 5
temp.111 = -temp.110
temp.112 = int 10
temp.113 = temp.111 + temp.112
combo1.114 = temp.113
temp.115 = int 255
temp.116 = ~temp.115
temp.117 = int 15
temp.118 = temp.116 & temp.117
combo2.119 = temp.118
temp.120 = temp.68
storeprop temp.68, 0
wait
temp.121 = temp.72
storeprop temp.72, 0
wait
temp.122 = temp.76
storeprop temp.76, 0
wait
temp.123 = temp.79
storeprop temp.79, 1
wait
temp.124 = temp.82
storeprop temp.82, 1
wait
temp.125 = temp.86
storeprop temp.86, 1
wait
temp.126 = temp.91
storeprop temp.91, 1
wait
temp.127 = temp.94
storeprop temp.94, 0
wait
temp.128 = temp.97
storeprop temp.97, 0
wait
temp.129 = temp.101
storeprop temp.101, 0
wait
temp.130 = temp.113
storeprop temp.113, 0
wait
temp.131 = temp.118
storeprop temp.118, 0
return 


----------- dead_store_elimination -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.67 = int 5
temp.68 = -temp.67
temp.70 = int 10
temp.71 = -temp.70
temp.72 = -temp.71
temp.74 = int 15
temp.75 = -temp.74
temp.76 = -temp.75
temp.78 = bool true
temp.79 = !temp.78
temp.81 = bool false
temp.82 = !temp.81
temp.84 = bool true
temp.85 = !temp.84
temp.86 = !temp.85
temp.88 = bool false
temp.89 = !temp.88
temp.90 = !temp.89
temp.91 = !temp.90
temp.93 = int 0
temp.94 = ~temp.93
temp.96 = int 255
temp.97 = ~temp.96
temp.99 = int 42
temp.100 = ~temp.99
temp.101 = ~temp.100
temp.103 = fix 1.5
temp.104 = -temp.103
temp.106 = fix 2.25
temp.107 = -temp.106
temp.108 = -temp.107
temp.110 = int 5
temp.111 = -temp.110
temp.112 = int 10
temp.113 = temp.111 + temp.112
temp.115 = int 255
temp.116 = ~temp.115
temp.117 = int 15
temp.118 = temp.116 & temp.117
storeprop temp.68, 0
wait
storeprop temp.72, 0
wait
storeprop temp.76, 0
wait
storeprop temp.79, 1
wait
storeprop temp.82, 1
wait
storeprop temp.86, 1
wait
storeprop temp.91, 1
wait
storeprop temp.94, 0
wait
storeprop temp.97, 0
wait
storeprop temp.101, 0
wait
storeprop temp.113, 0
wait
storeprop temp.118, 0
return 


----------- constant_folding -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.67 = int 5
temp.68 = int -5
temp.70 = int 10
temp.71 = int -10
temp.72 = -temp.71
temp.74 = int 15
temp.75 = int -15
temp.76 = -temp.75
temp.78 = bool true
temp.79 = bool false
temp.81 = bool false
temp.82 = bool true
temp.84 = bool true
temp.85 = bool false
temp.86 = !temp.85
temp.88 = bool false
temp.89 = bool true
temp.90 = !temp.89
temp.91 = !temp.90
temp.93 = int 0
temp.94 = int -1
temp.96 = int 255
temp.97 = int -256
temp.99 = int 42
temp.100 = int -43
temp.101 = ~temp.100
temp.103 = fix 1.5
temp.104 = fix -1.5
temp.106 = fix 2.25
temp.107 = fix -2.25
temp.108 = -temp.107
temp.110 = int 5
temp.111 = int -5
temp.112 = int 10
temp.113 = temp.111 + temp.112
temp.115 = int 255
temp.116 = int -256
temp.117 = int 15
temp.118 = temp.116 & temp.117
storeprop temp.68, 0
wait
storeprop temp.72, 0
wait
storeprop temp.76, 0
wait
storeprop temp.79, 1
wait
storeprop temp.82, 1
wait
storeprop temp.86, 1
wait
storeprop temp.91, 1
wait
storeprop temp.94, 0
wait
storeprop temp.97, 0
wait
storeprop temp.101, 0
wait
storeprop temp.113, 0
wait
storeprop temp.118, 0
return 


----------- dead_store_elimination -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.68 = int -5
temp.71 = int -10
temp.72 = -temp.71
temp.75 = int -15
temp.76 = -temp.75
temp.79 = bool false
temp.82 = bool true
temp.85 = bool false
temp.86 = !temp.85
temp.89 = bool true
temp.90 = !temp.89
temp.91 = !temp.90
temp.94 = int -1
temp.97 = int -256
temp.100 = int -43
temp.101 = ~temp.100
temp.107 = fix -2.25
temp.111 = int -5
temp.112 = int 10
temp.113 = temp.111 + temp.112
temp.116 = int -256
temp.117 = int 15
temp.118 = temp.116 & temp.117
storeprop temp.68, 0
wait
storeprop temp.72, 0
wait
storeprop temp.76, 0
wait
storeprop temp.79, 1
wait
storeprop temp.82, 1
wait
storeprop temp.86, 1
wait
storeprop temp.91, 1
wait
storeprop temp.94, 0
wait
storeprop temp.97, 0
wait
storeprop temp.101, 0
wait
storeprop temp.113, 0
wait
storeprop temp.118, 0
return 


----------- constant_folding -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.68 = int -5
temp.71 = int -10
temp.72 = int 10
temp.75 = int -15
temp.76 = int 15
temp.79 = bool false
temp.82 = bool true
temp.85 = bool false
temp.86 = bool true
temp.89 = bool true
temp.90 = bool false
temp.91 = !temp.90
temp.94 = int -1
temp.97 = int -256
temp.100 = int -43
temp.101 = int 42
temp.107 = fix -2.25
temp.111 = int -5
temp.112 = int 10
temp.113 = int 5
temp.116 = int -256
temp.117 = int 15
temp.118 = int 0
storeprop temp.68, 0
wait
storeprop temp.72, 0
wait
storeprop temp.76, 0
wait
storeprop temp.79, 1
wait
storeprop temp.82, 1
wait
storeprop temp.86, 1
wait
storeprop temp.91, 1
wait
storeprop temp.94, 0
wait
storeprop temp.97, 0
wait
storeprop temp.101, 0
wait
storeprop temp.113, 0
wait
storeprop temp.118, 0
return 


----------- dead_store_elimination -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.68 = int -5
temp.72 = int 10
temp.76 = int 15
temp.79 = bool false
temp.82 = bool true
temp.86 = bool true
temp.90 = bool false
temp.91 = !temp.90
temp.94 = int -1
temp.97 = int -256
temp.101 = int 42
temp.113 = int 5
temp.118 = int 0
storeprop temp.68, 0
wait
storeprop temp.72, 0
wait
storeprop temp.76, 0
wait
storeprop temp.79, 1
wait
storeprop temp.82, 1
wait
storeprop temp.86, 1
wait
storeprop temp.91, 1
wait
storeprop temp.94, 0
wait
storeprop temp.97, 0
wait
storeprop temp.101, 0
wait
storeprop temp.113, 0
wait
storeprop temp.118, 0
return 


----------- constant_folding -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.68 = int -5
temp.72 = int 10
temp.76 = int 15
temp.79 = bool false
temp.82 = bool true
temp.86 = bool true
temp.90 = bool false
temp.91 = bool true
temp.94 = int -1
temp.97 = int -256
temp.101 = int 42
temp.113 = int 5
temp.118 = int 0
storeprop temp.68, 0
wait
storeprop temp.72, 0
wait
storeprop temp.76, 0
wait
storeprop temp.79, 1
wait
storeprop temp.82, 1
wait
storeprop temp.86, 1
wait
storeprop temp.91, 1
wait
storeprop temp.94, 0
wait
storeprop temp.97, 0
wait
storeprop temp.101, 0
wait
storeprop temp.113, 0
wait
storeprop temp.118, 0
return 


----------- dead_store_elimination -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.68 = int -5
temp.72 = int 10
temp.76 = int 15
temp.79 = bool false
temp.82 = bool true
temp.86 = bool true
temp.91 = bool true
temp.94 = int -1
temp.97 = int -256
temp.101 = int 42
temp.113 = int 5
temp.118 = int 0
storeprop temp.68, 0
wait
storeprop temp.72, 0
wait
storeprop temp.76, 0
wait
storeprop temp.79, 1
wait
storeprop temp.82, 1
wait
storeprop temp.86, 1
wait
storeprop temp.91, 1
wait
storeprop temp.94, 0
wait
storeprop temp.97, 0
wait
storeprop temp.101, 0
wait
storeprop temp.113, 0
wait
storeprop temp.118, 0
return
